fix overlapping divs

--- a/src/components/DamagePointsCanvas/DamagePointsCanvas.css
+++ b/src/components/DamagePointsCanvas/DamagePointsCanvas.css
@@ -1,7 +1,7 @@
 .DamagePointsCanvas {
     grid-area: damage-points-canvas;
     border: 1px solid black;
-    width: 300px;
+    width: 400px;
 }
 
 @media print  {
